<resources>
    <string name="app_name" translatable="false">TáNaMão Licitações</string>
    <string name="title_activity_main">TáNaMão Licitações</string>
    <string name="title_activity_main_my_notices">My biddings</string>
    <string name="title_activity_main_account">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_save_card">Adicionar cartão</string>
    <string name="title_activity_save_card_edit_mode">Editar cartão</string>
    <string name="title_activity_card_details">Detalhes do cartão</string>
    <string name="title_activity_subscription_select_plan">Selecionar plano</string>
    <string name="title_activity_subscription_select_card">Selecionar cartão</string>
    <string name="title_activity_subscription_confirm">Confirmar assinatura</string>
    <string name="error_api_unknown">Ocorreu um erro desconhecido</string>
    <string name="error_api_not_authorized">Sem permissão para realizar esta ação</string>
    <string name="error_api_limit_exceeded">Limite de requisições excedido</string>
    <string name="error_api_send_sms_failed">Falha ao enviar mensagem SMS</string>
    <string name="error_api_email_activated">Este e-mail já está confirmado</string>
    <string name="error_api_unknown_message">Ocorreu um erro desconhecido. Por favor, tente novamente.</string>
    <string name="error_stripe_invalid_number">Número do cartão inválido</string>
    <string name="error_stripe_invalid_expiry_month">Mês inválido</string>
    <string name="error_stripe_invalid_expiry_year">Ano inválido</string>
    <string name="error_stripe_invalid_cvc">Código de segurança inválido</string>
    <string name="error_stripe_incorrect_number">Número incorreto</string>
    <string name="error_stripe_expired_card">Cartão expirado</string>
    <string name="error_stripe_incorrect_cvc">Código de segurança incorreto</string>
    <string name="error_stripe_incorrect_zip">CEP incorreto</string>
    <string name="error_stripe_card_declined">Cartão recusado</string>
    <string name="error_stripe_processing_error">Erro ao processar cartão</string>
    <string name="error_stripe_invalid_number_message">O número do cartão de crédito inserido é inválido</string>
    <string name="error_stripe_invalid_expiry_month_message">O mês da data de vencimento do cartão de crédito é inválido</string>
    <string name="error_stripe_invalid_expiry_year_message">O ano da data de vencimento do cartão de crédito é inválido</string>
    <string name="error_stripe_invalid_cvc_message">O código de segurança do cartão de crédito é inválido</string>
    <string name="error_stripe_incorrect_number_message">O número do cartão de crédito está incorreto</string>
    <string name="error_stripe_expired_card_message">Este cartão de crédito expirou</string>
    <string name="error_stripe_incorrect_cvc_message">O código de segurança do cartão de crédito está incorreto</string>
    <string name="error_stripe_incorrect_zip_message">O CEP informado está incorreto</string>
    <string name="error_stripe_card_declined_message">Este cartão de crédito foi recusado pela operadora do cartão</string>
    <string name="error_stripe_processing_error_message">Ocorreu um erro desconhecido durante o processamento do cartão de crédito</string>
    <string name="notification_news_title">TáNaMão Informa</string>
    <string name="notification_tips_title">Se liga na dica!</string>
    <string name="notification_new_bidding_title">Nova Oportunidade!</string>
    <string name="notification_update_title">Nova versão disponível!</string>
    <string name="notification_update_message">Uma nova versão do aplicativo está disponível!\nToque aqui para atualizar agora!</string>
    <string name="notification_tips_action1">Curtir</string>
    <string name="notification_tips_action2">Não curtir</string>
    <string name="notification_dialog_title">Receber notificações do TáNaMão Licitações?</string>
    <string name="notification_dialog_message">Notificações sobre abertura de novas licitações, novidades do aplicativo e mais.</string>
    <string name="dialog_okay">OK</string>
    <string name="dialog_no_thanks">Não, obrigado</string>
    <string name="download_starting">Iniciando download</string>
    <string name="determining_download_time">Determinando tempo de download…</string>
    <string name="downloading_file">Baixando arquivo</string>
    <string name="download_finished">Download concluído</string>
    <string name="download_failed">Falha ao baixar arquivo</string>
    <string name="go_to_subs">Ir para planos</string>
    <string name="trial_dialog_title">Período de avaliação gratuito expirado!</string>
    <string name="trial_dialog_message">Para continuar utilizando dos recursos do aplicativo é necessário efetuar a assinatura de um de nossos planos.\nToque em <b>Ir para planos</b> para mais informações.</string>
    <string name="update_dialog_title">Uma atualização está disponível!</string>
    <string name="update_dialog_message">Uma nova versão do aplicativo está disponível para download na PlayStore.\nGostaria de fazer o download e atualizar agora?</string>
    <string name="update_dialog_positive_btn">Atualizar agora</string>
    <string name="update_dialog_negative_btn">Mais tarde</string>
    <string name="title_activity_files">My biddings</string>
    <string name="title_activity_about">About</string>
    <string name="introHeader0">TáNaMão Licitações</string>
    <string name="introHeader1">Send</string>
    <string name="introHeader2">Receive</string>
    <string name="introHeader3">Search</string>
    <string name="introHeader4">Choose</string>
    <string name="introText0">Welcome to our app!</string>
    <string name="introText1">Send to your personal mails biddings that interest you!</string>
    <string name="introText2">Get notified by new bids, tips and news!</string>
    <string name="introText3">Easily find bids by keywords!</string>
    <string name="introText4">Choose the important segments for your company!</string>
    <string name="buscarHint">Search&#8230;</string>
    <string name="fileFormat">Format: %1$s</string>
    <string name="menu_details_send_to_email">Enviar para email</string>
    <string name="menu_details_download">Baixar edital</string>
    <string name="menu_details_see_online">Visualizar edital</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_notices">My biddings</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_about">About</string>
    <string name="see_details">See details</string>
    <string name="view_online">Visualize</string>
    <string name="send_to_email">Send to email</string>
    <string name="make_download">Download</string>
    <string name="close_menu">Close</string>
    <string name="dialog_close_button">Close</string>
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_edit_button">Edit</string>
    <string name="invalid_phone_number">Invalid phone number!</string>
    <string name="invalid_state_code">Invalid DDD! Please try again!</string>
    <string name="pref_email_label">Default email</string>
    <string name="pref_email_key">email</string>
    <string name="pref_email_default">youremail@example.com</string>
    <string name="notices_item_header">%1$s • %2$s • %3$s</string>
    <string name="notices_not_found_category">Não encontramos nenhum edital para o segmento %1$s!</string>
    <string name="no_email_clients_installed">There is no email client installed!</string>
    <string name="send_email_contact">Send email via&#8230;</string>
    <string name="about_text">O TáNaMão Licitações surgiu com o propósito de facilitar/agilizar/otimizar o acesso da classe empresarial aos editais e demais informações relevantes aos mesmos, no que se refere a Compras/Licitações Públicas.\n\nTrazendo informações de forma clara e objetiva, alertando sobre novos editais publicados através de notificações, possibilitando o filtro por segmento econômico, “através” de uma interface intuitiva e aproveitando a portabilidade dos aparelhos móveis, com um custo acessível.</string>
    <string name="about_subtext">Make the government your best customer!</string>
    <string name="about_subtext2">The bridge between you and government procurement!</string>
    <string name="more_information">More information:</string>
    <string name="modality_header">MODALIDADE</string>
    <string name="number_header">NÚMERO</string>
    <string name="date_header">DATA DE ABERTURA</string>
    <string name="amount_header">VALOR ESTIMADO</string>
    <string name="description_header">OBJETO</string>
    <string name="attachments_header">ANEXOS PUBLICADOS</string>
    <string name="agency_header">ÓRGÃO</string>
    <string name="save_text">Salvar</string>
    <string name="new_date_text">Nova data</string>
    <string name="rectified_text">Retificado</string>
    <string name="mpe_exclusive_text">Exclusivo MPE</string>
    <string name="notice_download">Baixar edital</string>
    <string name="sub_basic_name">Básico</string>
    <string name="sub_basic_description">Segmento e capital</string>
    <string name="sub_default_name">Padrão</string>
    <string name="sub_default_description">Segmentos e capitais</string>
    <string name="sub_default_quantity">Até %1$d</string>
    <string name="sub_premium_name">Premium</string>
    <string name="sub_premium_description">Ilimitado</string>
    <string name="sub_feature_one">Seja notificado por novas licitações, dicas e notícias</string>
    <string name="sub_feature_two">Escolha os segmentos importantes para sua empresa</string>
    <string name="sub_feature_three">Envie para seus emails pessoais os editais que lhe interessar</string>
    <string name="sub_feature_four">Encontre facilmente licitações por palavras-chave</string>
    <string name="sub_button">ASSINAR</string>
    <string name="sub_monthly">por Mês</string>
    <string name="sub_top_info_text"><![CDATA[<p><b>Assine AGORA</b> e experimente <b>GRÁTIS</b> por 30 dias!* As <b>melhores oportunidades</b> do mercado de Licitações na palma da sua mão!</p>]]></string>
    <string name="sub_bottom_info_text"><![CDATA[<p> * Após este período, será cobrado apenas o valor do plano escolhido</p><p> * O cancelamento da assinatura poderá ser realizado a qualquer momento sem nenhum custo</p>]]></string>
    <string name="sub_max_selected">Selecionados: %1$d/%2$s</string>
    <string name="action_contact">Contato</string>
    <string name="snackbar_action_open">Abrir</string>
    <string name="snackbar_action_try_again">Tentar novamente</string>
    <string name="accountconfiguration_advance_btn">AVANÇAR</string>
    <string name="intro_start_using_text">COMECE A UTILIZAR</string>
    <string name="dialog_default_email">Email padrão</string>
    <string name="dialog_text_one">Você não definiu um email padrão para receber os editais.</string>
    <string name="dialog_text_two">Para receber defina agora:</string>
    <string name="dialog_filter_modality">Modalidade</string>
    <string name="dialog_filter_city">Cidade</string>
    <string name="dialog_filter_open_date">Data de abertura</string>
    <string name="dialog_filter_exclusive_mpe">Exclusivo MPE</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Selecionar todos</string>
    <string name="action_select_none">Selecionar nenhum</string>
    <string name="menu_refresh">Atualizar</string>
    <string name="menu_filter">Filtrar</string>
    <string name="menu_search">Buscar</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="search">Search</string>
</resources>