<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/dialog_default_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        android:text="@string/dialog_text_one"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/dialog_text_two"/>

    <EditText
        android:id="@+id/useremail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/pref_email_default" />
</LinearLayout>