<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_delete"
        android:titleCondensed="@string/action_delete"
        />

    <item
        android:id="@+id/item_select_all"
        app:showAsAction="never"
        android:title="@string/action_select_all"
        android:titleCondensed="@string/action_select_all"
        />

    <item
        android:id="@+id/item_select_none"
        app:showAsAction="never"
        android:title="@string/action_select_none"
        android:titleCondensed="@string/action_select_none"
        />
</menu>