<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_see_online"
        android:orderInCategory="100"
        android:title="@string/menu_details_see_online"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_send_to_email"
        android:orderInCategory="101"
        android:title="@string/menu_details_send_to_email"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="102"
        android:title="@string/menu_details_download"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_see_in_website"
        android:orderInCategory="103"
        android:title="Ver no site oficial"
        app:showAsAction="never"
        />

</menu>