<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/favoriteText"
            android:drawableTop="@drawable/ic_star_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/save_text"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_normal"
                android:text="@string/modality_header"
                />

            <TextView
                android:id="@+id/modalityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_normal"
                android:text="@string/number_header"
                />

            <TextView
                android:id="@+id/numberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_normal"
                android:text="@string/date_header"
                />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_normal"
                android:text="@string/amount_header"
                />

            <TextView
                android:id="@+id/amountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/font_normal"
            android:text="@string/description_header"
            />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_below="@id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            />

    </RelativeLayout>

    <include layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <TextView
            android:id="@+id/agencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/font_normal"
            android:text="@string/agency_header"
            />

        <TextView
            android:id="@+id/agencyText"
            android:layout_below="@id/agencyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            />

    </RelativeLayout>

    <include layout="@layout/horizontal_divider"/>

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/spacing_small"
        >

        <TextView
            android:id="@+id/infoNewDate"
            android:drawableTop="@drawable/ic_new_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_tiny"
            android:layout_marginRight="@dimen/spacing_small"
            android:text="@string/new_date_text"/>

        <TextView
            android:id="@+id/infoRectified"
            android:drawableTop="@drawable/ic_rectified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_tiny"
            android:layout_marginRight="@dimen/spacing_small"
            android:text="@string/rectified_text"/>

        <TextView
            android:id="@+id/infoExclusive"
            android:drawableTop="@drawable/ic_exclusive_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_tiny"
            android:text="@string/mpe_exclusive_text"/>

    </LinearLayout>

    <include
        android:id="@+id/dividerInfo"
        layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <TextView
            android:id="@+id/attachmentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/font_normal"
            android:text="@string/attachments_header"
            />

        <LinearLayout
            android:id="@+id/attachmentsLayoutHolder"
            android:layout_below="@id/attachmentsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_download"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</LinearLayout>